--- a/payment.html
+++ b/payment.html
@@ -21,9 +21,9 @@
     <p>حوّل <b>1$</b> بالطريقة اللي تناسبك. بعدها اكتب رقم العملية/الوقت (اختياري) واضغط تأكيد.</p>
 
     <div class="box">
-      <div><b>زين كاش:</b> 07XXXXXXXXX</div>
-      <div><b>كي كارد:</b> XXXX-XXXX-XXXX-XXXX</div>
-      <div class="tiny">راح تبدّل الأرقام بأرقامك لاحقًا</div>
+     <p><b>الدفع عبر كي كارد</b></p>
+<p>رقم الحساب:<br><b>2510636067</b></p>
+
     </div>
 
     <input id="ref" placeholder="رقم العملية / وقت التحويل (اختياري)">
